# Whale-VAD

./: README.md  pyproject.toml
whalevad/: __init__.py  model.py  specgrogram.py  spectrogram.py  utils.py  weights.py
