[project]
name = "whalevad"
dynamic = ["version"]
authors = [
  { name="Christiaan M. Geldenhuys", email="cmgeldenhuys@sun.ac.za" },
  { name="Günther Tonitz", email="25040863@sun.ac.za" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/CMGeldenhuys/Whale-VAD"
Issues = "https://github.com/CMGeldenhuys/Whale-VAD/issues"
