[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whalevad"
dynamic = ["version"]
authors = [
  { name="Christiaan M. Geldenhuys", email="cmgeldenhuys@sun.ac.za" },
  { name="Günther Tonitz", email="gtonitz@sun.ac.za" },
]
description = "A lightweight sound event detection system for discovering Baleen whale calls in marine audio recordings"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff",
]
examples = [
    "remotezip",
]

[project.urls]
Homepage = "https://github.com/CMGeldenhuys/Whale-VAD"
Issues = "https://github.com/CMGeldenhuys/Whale-VAD/issues"

[tool.hatch.build.targets.wheel]
packages = ["whalevad"]
